# To-know-everything

./: .env.example  .gitignore  AGENTS.md  app.py  automation.py  content_filters.py  daily_job.py  daily_report.py  delivery_state.py  environment.yml  llm.py  notifications.py  pyproject.toml  requirements.txt  runtime_config.py
app/: __init__.py  auth.py  bootstrap.py  config.py  main.py  models.py  utils.py
app/automation/: __init__.py  jobs.py  policies.py  scheduler.py
app/config/: __init__.py  constants.py  runtime.py  settings.py
app/domain/: __init__.py  enums.py  (+2 more)
apps/server/: Cargo.toml
apps/server/migrations/: 0001_init.sql  0002_add_telegram_configs.sql
apps/server/src/: main.rs
apps/server/src/api/: auth.rs  dashboard.rs  health.rs  mod.rs  settings.rs  tasks.rs
apps/server/src/app/: config.rs  error.rs  mod.rs  state.rs
apps/server/src/collectors/: mod.rs
apps/server/src/jobs/: mod.rs
apps/server/src/models/: auth.rs  mod.rs  settings.rs  tasks.rs
apps/server/src/repos/: mod.rs
apps/server/src/security/: crypto.rs  mod.rs  password.rs
apps/server/src/services/: mod.rs  openai.rs  telegram.rs  xiaohongshu.rs
bilibili/: __init__.py  crawler.py  web.py
docs/: environments.md  plan.md  xiaohongshu-feasibility.md
materials_notice/: __init__.py  crawler.py  web.py
scripts/: _env.py  bootstrap_env.py  run_cli.py  run_job.py  run_scheduler.py  run_web.py  test_bark.py
static/: styles.css
templates/: base.html  bilibili.html  debug.html  index.html  llm.html  login.html  materials_notices.html  notifications.html  xhs.html
xhs/: __init__.py  crawler.py  web.py
(+100 files in other folders)
