[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "to-know-everything"
version = "0.1.0"
description = "A modular information collection and notification system skeleton."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["app*"]

