[package]
name = "tke-server"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm-siv = "0.11.1"
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
rand = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
